fix firefox spacing

--- a/D&D_5e_Shaped/D&D_5e.css
+++ b/D&D_5e_Shaped/D&D_5e.css
@@ -3920,9 +3920,29 @@ select {
 .sheet-rolltemplate-5eDefault .sheet-offset-23-24 {
   margin-left: 95.83333%;
 }
-.sheet-col-9,
-.sheet-rolltemplate-5eDefault .sheet-col-9 {
+.sheet-col-07,
+.sheet-rolltemplate-5eDefault .sheet-col-08 {
+  width: 7%;
+}
+.sheet-col-08,
+.sheet-rolltemplate-5eDefault .sheet-col-08 {
+  width: 8%;
+}
+.sheet-col-09,
+.sheet-rolltemplate-5eDefault .sheet-col-09 {
   width: 9%;
+}
+.sheet-col-095,
+.sheet-rolltemplate-5eDefault .sheet-col-095 {
+  width: 9.5%;
+}
+.sheet-col-11,
+.sheet-rolltemplate-5eDefault .sheet-col-11 {
+  width: 11%;
+}
+.sheet-col-12,
+.sheet-rolltemplate-5eDefault .sheet-col-12 {
+  width: 12%;
 }
 .sheet-col-17,
 .sheet-rolltemplate-5eDefault .sheet-col-17 {
@@ -3963,6 +3983,10 @@ select {
 .sheet-col-32,
 .sheet-rolltemplate-5eDefault .sheet-col-32 {
   width: 32%;
+}
+.sheet-col-3545,
+.sheet-rolltemplate-5eDefault .sheet-col-3545 {
+  width: 35.45%;
 }
 .sheet-col-37,
 .sheet-rolltemplate-5eDefault .sheet-col-37 {
